blue note is on

--- a/src/app/rand/rand.component.html
+++ b/src/app/rand/rand.component.html
@@ -1,3 +1,2 @@
-<h1 [ngStyle]="{'font-size':'60pt','position':'absolute','top':notey[ynum]+'px','left':(notex*xnum+250)+'px','color':'black'}">♪</h1> 
-
-{{xblue}}
+<h1 [ngStyle]="{'font-size':'60pt','position':'absolute','top':notey[yvalue]+60+'px','left':(notex*xvalue+250)+'px','color':'black'}">♪</h1> 
+<h1 [ngStyle]="{'font-size':'60pt','position':'absolute','top':notey[yblue]+60+'px','left':(notex*xblue+250)+'px','color':'blue'}">♪</h1> 
