--- a/src/app/note-board/note-board.component.html
+++ b/src/app/note-board/note-board.component.html
@@ -3,11 +3,12 @@
 <img   src=  "/assets/sheet.jpg"  style="width: 1125px;height: 500px;" >
 <main>
   
-   <app-rand
-        *ngFor="let val of note ; let i = index" 
-        [xvalue]="val"
-        [yvalue]="1050"
-        [xnum]="i"
+   <app-rand 
+       *ngFor="let val of note ; let i = index" 
+        [xvalue]="i"
+        [yvalue]="ynum[i]"
+        [xblue]="xblue"
+        [yblue]="yblue"
         > 
 
     </app-rand>
