19 note on to go

--- a/src/app/rand/rand.component.html
+++ b/src/app/rand/rand.component.html
@@ -1,2 +1,2 @@
-<h1 [ngStyle]="{'font-size':'60pt','position':'absolute','top':notey[yvalue]+60+'px','left':(notex*xvalue+250)+'px','color':'black'}">♪</h1> 
-<h1 [ngStyle]="{'font-size':'60pt','position':'absolute','top':notey[yblue]+60+'px','left':(notex*xblue+250)+'px','color':'blue'}">♪</h1> 
+<h1 [ngStyle]="{'font-size':'60pt','position':'absolute','top':notey*yvalue+63+'px','left':(notex*xvalue+250)+'px','color':'black'}">♪</h1> 
+<h1 [ngStyle]="{'font-size':'60pt','position':'absolute','top':yblue*notey+63+'px','left':(notex*xblue+250)+'px','color':'blue'}">♪</h1> 
