--- a/src/app/note-board/note-board.component.html
+++ b/src/app/note-board/note-board.component.html
@@ -1,8 +1,14 @@
 
+
+<div class="board">
+    <img   src=  "/assets/sheet.jpg"  style="width: 1125px;height: 500px;" >
+    <button [ngStyle]="{'position':'absolute','top':600+'px','left':900+'px'}"nbButton outline status="danger" (click)="generate()" >Start/Stop</button>
+
+</div>
+<main class="board" >
  
-<img   src=  "/assets/sheet.jpg"  style="width: 1125px;height: 500px;" >
-<main>
-  
+<br>
+ 
    <app-rand 
        *ngFor="let val of note ; let i = index" 
         [xvalue]="i"
