Vex Java Script

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -294,3 +294,5 @@
       visibility: hidden;
     }
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
