--- a/src/app/note-board/note-board.component.html
+++ b/src/app/note-board/note-board.component.html
@@ -4,7 +4,8 @@
 <div class="board">
     <img   src=  "/assets/sheet.jpg"  style="width: 1125px;height: 500px;" >
     <button [ngStyle]="{'position':'absolute','top':600+'px','left':800+'px'}"nbButton outline status="danger" (click)="generate()" >Start/Stop</button>
-<input id="speedm" name="speedm" type="range"  value="100"  (input)="g_speed()" [ngStyle]="{'position':'absolute','top':600+'px','left':900+'px'}">
+<input id="speedm"  #speed2 type="range" min="200" max="2000" value="1000"  (input)="g_speed(speed2,smoth)"  [ngStyle]="{'position':'absolute','top':600+'px','left':900+'px'}">
+<input id="smoth"  #smoth type="range" min="1" max="17" value="5"  (input)="g_speed(speed2,smoth)" [ngStyle]="{'position':'absolute','top':625+'px','left':900+'px'}">
 {{noteime}}
 {{test}}
 </div>
