--- a/src/styles.scss
+++ b/src/styles.scss
@@ -293,6 +293,6 @@
       display: none;
       visibility: hidden;
     }
-  }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+   }
+// html, body { height: 100%; }
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
