vex flow random generate

--- a/src/app/note-board/note-board.component.html
+++ b/src/app/note-board/note-board.component.html
@@ -8,6 +8,7 @@
 <p>smothness= {{smothness}}</p>
 <!-- <mat-slider min="200" max="2000" step="200" [(ngModel)]="noteime"></mat-slider> -->
 </div>
+{{xblue}}
 <!-- <main class="board" >
  
 <br>
