note time calculater

--- a/src/app/note-board/note-board.component.html
+++ b/src/app/note-board/note-board.component.html
@@ -9,6 +9,9 @@
 <!-- <mat-slider min="200" max="2000" step="200" [(ngModel)]="noteime"></mat-slider> -->
 </div>
 {{xblue}}
+{{ytime_num}}
+{{ytime}}
+{{i}}
 <!-- <main class="board" >
  
 <br>
