blue note remake

--- a/src/app/note-board/note-board.component.html
+++ b/src/app/note-board/note-board.component.html
@@ -10,12 +10,12 @@
 <!-- <mat-slider min="200" max="2000" step="200" [(ngModel)]="noteime"></mat-slider> -->
 <div [ngStyle]="{'position':'absolute','top':700+'px','left':50+'px'}" class="board">
 {{xblue}}
-ff
-{{ytime_num}}
+<!-- ff
+{{ytime_num}} -->
 ff
 {{ytime}}
 ff
-{{number_of_bar_note}}
+<!-- {{number_of_bar_note}} -->
 </div>
 <!-- <main class="board" >
  
