--- a/src/app/note-board/note-board.component.html
+++ b/src/app/note-board/note-board.component.html
@@ -1,22 +1,34 @@
 
-    <div [ngStyle]="{'position':'absolute','top':100+'px','left':200+'px'}" id="dau"></div>
-    <div [ngStyle]="{'position':'absolute','top':300+'px','left':200+'px'}" id="rau"></div>
-    <!-- <img   src=  "/assets/sheet.jpg"  style="width: 1125px;height: 500px;" > -->
-<button [ngStyle]="{'position':'absolute','top':600+'px','left':800+'px'}"nbButton outline status="danger" (click)="generate()" >Start/Stop</button>
-<input id="speedm"  #speed2 type="range" min="200" max="2000" value="2000"  (input)="g_speed(speed2,smoth)"  [ngStyle]="{'position':'absolute','top':600+'px','left':900+'px'}">
+
+<!-- <div id="rau"></div> -->
+<!-- <img   src=  "/assets/sheet.jpg"  style="width: 1125px;height: 500px;" > -->
+
+<!-- <mat-slider min="200" max="2000" step="200" [(ngModel)]="noteime"></mat-slider> -->
+<div style="align-items: center;"  [ngStyle]="{'position':'relative','top':0+'px','left':0+'px'}">
+   
+    <div  id="dau"></div>
+    <div  *ngFor="let val of w_buttons ; let i = index"  >
+        <button  [ngStyle]="{'position':'absolute','top':325+'px','left':30+(60*i)+'px'}" (click)="whit_button(i)"  style="width: 60px;height: 200px;border-radius: 12px;"  ></button>
+    </div>
+    <div *ngFor="let val of b_buttons ; let v = index"  >
+        <div *ngIf="v==0 || v==2 || v==3 || v==5 || v==6 || v==7 || v==9 || v==10 || v==12 || v==13 || v==14">
+            <button [ngStyle]="{'position':'absolute','top':325+'px','left':70+(60*v)+'px'}" (click)="black_button(v)" style="width: 40px;height: 120px;border-radius: 10px;background-color: black;"  ></button>
+        </div> 
+    </div>
+    <button id="Start/Stop" [ngStyle]="{'position':'absolute','top':260+'px','left':800+'px'}"nbButton outline status="danger" (click)="generate()" style="width: 60px;height: 40px;border-radius: 10px;" >{{start_stop}}</button>
+</div>
+
+<!-- <input id="speedm"  #speed2 type="range" min="200" max="2000" value="2000"  (input)="g_speed(speed2,smoth)"  [ngStyle]="{'position':'absolute','top':600+'px','left':900+'px'}">
 <input id="smoth"  #smoth type="range" min="1" max="17" value="5"  (input)="g_speed(speed2,smoth)" [ngStyle]="{'position':'absolute','top':625+'px','left':900+'px'}">
 <p [ngStyle]="{'position':'absolute','top':600+'px','left':600+'px'}" >speed= {{noteime}} ms/note</p>
-<p [ngStyle]="{'position':'absolute','top':625+'px','left':600+'px'}">smothness= {{smothness}}</p>
-<!-- <mat-slider min="200" max="2000" step="200" [(ngModel)]="noteime"></mat-slider> -->
-<div [ngStyle]="{'position':'absolute','top':700+'px','left':50+'px'}" class="board">
+<p [ngStyle]="{'position':'absolute','top':625+'px','left':600+'px'}">smothness= {{smothness}}</p> -->
+
+<!-- <div [ngStyle]="{'position':'absolute','top':700+'px','left':50+'px'}" class="board">
 {{xblue}}
-<!-- ff
-{{ytime_num}} -->
 ff
 {{ytime}}
 ff
-<!-- {{number_of_bar_note}} -->
-</div>
+</div> -->
 <!-- <main class="board" >
  
 <br>
