--- a/src/app/note-board/note-board.component.html
+++ b/src/app/note-board/note-board.component.html
@@ -15,10 +15,10 @@
             <button [ngStyle]="{'position':'absolute','top':325+'px','left':70+(60*v)+'px'}" (mousedown)="black_button_down(v)" (mouseup)="black_button_up(v)" style="width: 40px;height: 120px;border-radius: 10px;background-color: black;"  ></button>
         </div> 
     </div>
-    <input id="speedm"  #speed2 type="range" min="200" max="2000" value="2000"  (input)="g_speed(speed2,smoth)"  [ngStyle]="{'position':'absolute','top':250+'px','left':900+'px'}">
+    <input id="speedm"  #speed2 type="range" min="1" max="200" value="72"  (input)="g_speed(speed2,smoth)"  [ngStyle]="{'position':'absolute','top':250+'px','left':900+'px'}">
     <input id="smoth"  #smoth type="range" min="1" max="17" value="5"  (input)="g_speed(speed2,smoth)" [ngStyle]="{'position':'absolute','top':300+'px','left':900+'px'}">
 
-    <p [ngStyle]="{'position':'absolute','top':250+'px','left':500+'px'}" >speed= {{noteime}} ms/note</p>
+    <p [ngStyle]="{'position':'absolute','top':250+'px','left':500+'px'}" >speed= {{noteime}} npm</p>
     <p [ngStyle]="{'position':'absolute','top':300+'px','left':500+'px'}">smothness= {{smothness}}</p>
 
     <button id="Start/Stop" [ngStyle]="{'position':'absolute','top':260+'px','left':800+'px'}" (click)="generate()" style="width: 60px;height: 40px;border-radius: 10px;" >{{start_stop}}</button>
