play back is on

--- a/src/app/note-board/note-board.component.html
+++ b/src/app/note-board/note-board.component.html
@@ -27,12 +27,12 @@
 
 
 
-<!-- <div [ngStyle]="{'position':'absolute','top':700+'px','left':50+'px'}" class="board">
-{{xblue}}
+<div [ngStyle]="{'position':'absolute','top':700+'px','left':50+'px'}" class="board">
+{{pleyer_note}}
 ff
-{{ytime}}
+
 ff
-</div> -->
+</div>
 <!-- <main class="board" >
  
 <br>
