--- a/src/app/note-board/note-board.component.html
+++ b/src/app/note-board/note-board.component.html
@@ -4,14 +4,15 @@
 <!-- <img   src=  "/assets/sheet.jpg"  style="width: 1125px;height: 500px;" > -->
 
 <!-- <mat-slider min="200" max="2000" step="200" [(ngModel)]="noteime"></mat-slider> -->
-<div *ngif="bar_number>3">
+<div *ngIf="bar_number>3">
     <app-rand ></app-rand>
 </div>
 <div style="align-items: center;"  [ngStyle]="{'position':'relative','top':0+'px','left':0+'px'}">
    
     <div  id="dau"></div>
     <div  *ngFor="let val of w_buttons ; let i = index"  >
-        <button [ngClass]="{'white' : !w_buttons[i], 'gray': w_buttons[i]}" [ngStyle]="{'position':'absolute','top':325+'px','left':30+(60*i)+'px'}" (mousedown)="whit_button_down(i)" (mouseup)="whit_button_up(i)" style="width: 60px;height: 200px;border-radius: 12px;"  ></button>
+        <button [ngClass]="{'white' : !w_buttons[i], 'gray': w_buttons[i]}" 
+        [ngStyle]="{'position':'absolute','top':325+'px','left':30+(60*i)+'px'}" (mousedown)="whit_button_down(i)" (mouseup)="whit_button_up(i)" style="width: 60px;height: 200px;border-radius: 12px;"  ></button>
     </div>
     <div *ngFor="let val of b_buttons ; let v = index"  >
         <div *ngIf="v==0 || v==2 || v==3 || v==5 || v==6 || v==7 || v==9 || v==10 || v==12 || v==13 || v==14">
